--- a/css/style-181209.css
+++ b/css/style-181209.css
@@ -112,9 +112,7 @@ a:visited {
   margin: 0;
   padding: 10px;
 }
-.photo, label {
-    margin-right: 0;
-}
+
 .grid .photo.hero img {
 	max-width: 100%;
 }
@@ -124,18 +122,9 @@ a:visited {
 .grid .photo .active {
 	max-width: 100%;
 }
-label {
-  display: block;
-}
-label input {
-  display: none;
-}
-input:checked ~ .photo img {
-  max-width: 100%;
-  	width: 100%;
-}
 .grid .event-block {
 	display: inline-block;
+	padding-top: 70px;
 }
 .grid .photo img {
     height: auto !important;
@@ -147,10 +136,6 @@ input:checked ~ .photo img {
 .grid .photo h2 {
   display: none;
 }
-img.star {
-	width: 16.6%;
-}
-
 /* ipad */
 @media all and (min-width: 668px) and (max-width: 799px) {
 	body {
