--- a/css/style-181209.css
+++ b/css/style-181209.css
@@ -90,8 +90,8 @@ h1 {
 	font-size:8.3rem;
 }
 h2 {
-	padding: 10px;
-	font-size: 240%;
+	padding: 70px 10px 10px 10px;
+	font-size: 500%;
 	letter-spacing: 1px;
 }
 h3 {
