--- a/css/style-190608.css
+++ b/css/style-190608.css
@@ -373,6 +373,7 @@ a:visited {
     .month-title {
     	width: 65%;
     	height: auto;
+    	margin: 50px 0 0 0;
     }
     .photoo::after {
     	height: 25px !important;
