--- a/css/style-190608.css
+++ b/css/style-190608.css
@@ -371,18 +371,19 @@ a:visited {
 	}
 	.archive {
 		margin-right: 0;
-		bottom: 5px;
+		bottom: 3px;
+		right: -2px;
 	}
 	.archive img {
 		display: block;
 		margin: 0;
-		width: 90px;
+		width: 80px;
 	}
 	.grid .month-title:first-child {
 		margin-top: 50px;
 	}
     .photoo {
-        width: 82%;
+        width: 79%;
         margin: 0 0 50px 0;
     }
     .xenerr-logo {
