--- a/css/style-190608.css
+++ b/css/style-190608.css
@@ -377,13 +377,14 @@ a:visited {
 	.archive img {
 		display: block;
 		margin: 0;
-		width: 80px;
+		width: 75px;
+		padding-bottom: 1px;
 	}
 	.grid .month-title:first-child {
 		margin-top: 50px;
 	}
     .photoo {
-        width: 79%;
+        width: 80%;
         margin: 0 0 50px 0;
     }
     .xenerr-logo {
