--- a/css/style-200410.css
+++ b/css/style-200410.css
@@ -663,6 +663,7 @@ display: none;
   	}
     .photoo::after {
     	font-size: 15px;
+    	line-height: 1.3;
     }
     .logo-container {
 		margin-top: 0;
