--- a/css/style-200410.css
+++ b/css/style-200410.css
@@ -244,9 +244,7 @@ h1 {
 	font-size:8.3rem;
 }
 h2 {
-	padding: 2.6rem 9rem;
 	font-size: 140%;
-	letter-spacing: 1px;
 }
 h3 {
 	padding: 0 12rem;
@@ -259,6 +257,9 @@ a {
 }
 a:visited {
 	color: purple;
+}
+h2 {
+	font-size: 20px;
 }
 /* photos */
 .grid {
@@ -463,6 +464,9 @@ a:visited {
 }
 .photoo.moscow::after {
 	content: "Moscow 🇷🇺";
+}
+.photoo.rostov::after {
+	content: "Rostov-na-Donu 🇷🇺";
 }
 .photoo.berlin::after {
 	content: "Berlin 🇩🇪";
